# xFusion-Guardian

./: .env.example  .gitignore  .gitmessage  AGENTS.md  CHANGELOG.md  README.md  XFUSION_V0.2.4.2_IMPLEMENTATION.md  audit.jsonl  pyproject.toml
docs/: demo-script.md  release-plan-v0.2.2.md  release-plan-v0.2.3.md  release-plan-v0.2.4.md  release-plan-v0.2.5.md  release-readiness-v0.2.md  review-merge-readiness-v0.2.1.md  review-merge-readiness-v0.2.2.md  review-merge-readiness-v0.2.3.md  sandbox-lima.md  self-test.md  tools.md  verification-dataset-strategy.md  verification-suite.md
docs/architecture/: capability-schema.md  execution-policy-v0.2.3.md  execution-policy-v0.2.4.md  execution-policy-v0.2.5.md  pydantic-langgraph-blueprint.md  schema-subset.md  v0.2.5-controlled-execution-platform.md
docs/plans/: 2026-04-24-tui-upgrade-design.md  2026-04-24-tui-upgrade-implementation.md
docs/prompts/: core-agent-prompt.md
docs/specs/: xfusion-v0.1.md  xfusion-v0.2.4.2.md  xfusion-v0.2.4.3.md  xfusion-v0.2.4.4.md  xfusion-v0.2.5.md  xfusion-v0.2.md
docs/submission/: judge-demo-script.md  judge-facing-design-document.md
docs/verification/: verification-dataset-strategy.md  (+1 more)
tests/: test_command_trace.py  test_conversation_gateway.py  test_conversation_routing.py  test_data_flow.py  test_live_vm_rehearsal.py  test_plan_correctness.py  test_prompt_os.py  test_response_and_audit_contract.py  test_safety_invariants.py  test_sessions.py  test_smoke.py  test_tui_commands.py  test_v023_risk_gating.py  test_v0242_agent_led_hybrid.py  test_v024_policy_integrity.py  test_v025_controlled_platform.py  test_v02_contracts.py  test_v02_hardening.py  test_verification_repair_roles.py  test_verification_runner.py  test_workflow_completion.py
verification/: README.md
(+368 files in other folders)
