[project]
name = "xfusion"
version = "0.2.4.3"
description = "Safety-aware Linux admin agent for the XFusion AI Hackathon."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1,<2",
    "pydantic>=2.12,<3",
    "pyyaml>=6.0.2",
    "textual>=0.86.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
xfusion = "xfusion.app.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
    "ty>=0.0.1a6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.hatch.build.targets.wheel]
packages = ["xfusion"]
